# random-walks-py

./: .gitignore  CHANGELOG.md  Cargo.toml  pyproject.toml  randomwalks_lib.pyi
benches/: benchmarks.rs
docs/source/: api.rst  conf.py  index.rst
pyo3/: pyvenv.cfg
randomwalks_lib/: __init__.py  randomwalks_lib.pyi
randomwalks_lib/dataset/: dataset.pyi
randomwalks_lib/dp/: __init__.py  dp.pyi
randomwalks_lib/walker/: walker.pyi
src/: dp.rs  lib.rs  walk.rs
src/dataset/: builder.rs  loader.rs  mod.rs  point.rs  walks_builder.rs
src/dataset/loader/: csv.rs  mod.rs  polars.rs
src/dp/: builder.rs  mod.rs  multi.rs  pregenerated.rs  problems.rs  propdp.rs  simple.rs  stats.rs  store.rs
src/generators/: mod.rs  simple.rs
src/kernel/: biased_correlated_rw.rs  biased_rw.rs  correlated_rw.rs  generator.rs  levy_walk.rs  mod.rs  normal_dist.rs  simple_rw.rs
src/models/: biased_rw.rs  mod.rs  nd_biased_rw.rs  simple_rw.rs
src/solvers/: biased_rw.rs  correlated_rw.rs  mod.rs  simple_rw.rs
src/steppers/: mod.rs  simple.rs
src/walk_analyzer/: mod.rs
src/walk_generator/: correlated.rs  mod.rs  simple_rw.rs  standard.rs
src/walk_generators/: biased_rw.rs  correlated_rw.rs  mod.rs  simple_rw.rs
src/walker/: correlated.rs  land_cover.rs  levy.rs  mod.rs  multi_step.rs  standard.rs
