[package]
name = "randomwalks-lib"
version = "0.1.0"
authors = ["Alexander Korn <alexander.korn@tu-dortmund.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.4.0", features = ["rand"] }
rand = "0.8.5"
regex = "1.8.4"
strum = { version = "0.25", features = ["derive"] }
csv = "1.2.2"
anyhow = "1.0.72"
thiserror = "1.0.43"
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.25", features = ["macros", "formatting", "parsing"] }
pathfinding = "4.3.1"
line_drawing = "1.0.0"
geo = "0.26.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
